Inserindo coluna Bancos na Tabela Fechamento

--- a/Mesa01/appsettings.json
+++ b/Mesa01/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Mesa01Context": "Server=INTERCAM038;Database=Mesa01Context-b628d819-56f1-4a5d-a0d1-af8eedd2e1cc;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
